Cmake_minimum_required(VERSION 3.13)
project(Corewar C)

set(CMAKE_C_STANDARD 99)
include_directories(includes)
aux_source_directory(libft/printf LIBFT)
aux_source_directory(libft/standart A)
aux_source_directory(libft/my_functions B)
        aux_source_directory(libft/lst C)
        include_directories(libft/includes D)
        include_directories(includes F)
        add_executable(corewar src/main.c includes/vm.h ${LIBFT} ${A} ${B} ${C} ${D} src/initializing.c src/useful_function.c src/parse.c src/dispatcher1_5.c src/dispatcher6_10.c src/dispatcher11_15.c src/dispatcher16.c src/useful_functions2.c src/send_package.c src/useful_function.c src/dispatcher16.c src/codage.c src/loop.c)